--- a/Accentos/Base.lproj/Main.storyboard
+++ b/Accentos/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your word" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eoJ-R9-a47">
-                                <rect key="frame" x="50" y="374" width="314" height="50"/>
+                                <rect key="frame" x="50" y="366" width="314" height="50"/>
                                 <color key="backgroundColor" red="0.82313855971534122" green="0.90766221165358174" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="6f0-2H-bi8"/>
@@ -29,16 +29,19 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dpu-gJ-vQ7">
-                                <rect key="frame" x="50" y="444" width="314" height="42"/>
+                                <rect key="frame" x="100" y="436" width="214" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.91091968400000001" blue="0.35858382010000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Y6v-2V-XVr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="25"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="wordSubmitted:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AOB-jL-frC"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNu-Hd-MPQ">
-                                <rect key="frame" x="50" y="304" width="314" height="50"/>
+                                <rect key="frame" x="50" y="296" width="314" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.88770322901518162" blue="0.85724314626462417" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Xio-cc-MCd"/>
@@ -47,23 +50,37 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdm-Iz-jq9">
+                                <rect key="frame" x="50" y="226" width="314" height="50"/>
+                                <color key="backgroundColor" red="1" green="0.80660188100663288" blue="0.90875313287662041" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="vJK-LD-9Gy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dpu-gJ-vQ7" secondAttribute="trailing" constant="50" id="01a-Ro-tl9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dpu-gJ-vQ7" secondAttribute="trailing" constant="100" id="01a-Ro-tl9"/>
                             <constraint firstItem="BNu-Hd-MPQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="0Tz-P5-FOV"/>
+                            <constraint firstItem="BNu-Hd-MPQ" firstAttribute="top" secondItem="bdm-Iz-jq9" secondAttribute="bottom" constant="20" id="8nU-3T-7Z1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bdm-Iz-jq9" secondAttribute="trailing" constant="50" id="C8r-8U-OHo"/>
                             <constraint firstItem="eoJ-R9-a47" firstAttribute="top" secondItem="BNu-Hd-MPQ" secondAttribute="bottom" constant="20" id="Di1-jN-DFd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dpu-gJ-vQ7" secondAttribute="bottom" constant="250" id="HEy-Gu-5ab"/>
                             <constraint firstItem="eoJ-R9-a47" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="LTJ-Cb-cq0"/>
+                            <constraint firstItem="bdm-Iz-jq9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="UX5-re-bYO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eoJ-R9-a47" secondAttribute="trailing" constant="50" id="VzO-NP-zuM"/>
                             <constraint firstItem="dpu-gJ-vQ7" firstAttribute="top" secondItem="eoJ-R9-a47" secondAttribute="bottom" constant="20" id="fY0-Rz-qxN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BNu-Hd-MPQ" secondAttribute="trailing" constant="50" id="fs1-ql-GaY"/>
-                            <constraint firstItem="dpu-gJ-vQ7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="vwg-Of-9Tt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dpu-gJ-vQ7" secondAttribute="bottom" constant="250" id="huW-j4-wXE"/>
+                            <constraint firstItem="dpu-gJ-vQ7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="vwg-Of-9Tt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="result" destination="BNu-Hd-MPQ" id="VkX-Rg-c2V"/>
+                        <outlet property="wordInfo" destination="bdm-Iz-jq9" id="o0i-Zc-yyL"/>
                         <outlet property="wordTyped" destination="eoJ-R9-a47" id="rZ5-Y8-H1M"/>
                     </connections>
                 </viewController>
