--- a/Accentos/Base.lproj/Main.storyboard
+++ b/Accentos/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your word..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B2M-dK-ogs">
-                                <rect key="frame" x="50" y="516" width="314" height="50"/>
+                                <rect key="frame" x="50" y="366" width="314" height="50"/>
                                 <color key="backgroundColor" red="0.82313855970000005" green="0.90766221170000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.72119804799999998" green="1" blue="0.4873204659" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -30,7 +30,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hDJ-qy-uRK">
-                                <rect key="frame" x="80" y="586" width="254" height="50"/>
+                                <rect key="frame" x="80" y="436" width="254" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.55044198339999995" blue="0.46372166310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="rc4-FM-Dip"/>
@@ -43,19 +43,33 @@
                                     <action selector="wordWasSumbitted:" destination="FlK-ZD-Use" eventType="touchUpInside" id="Pf9-Ai-f1V"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIo-XX-qkj">
+                                <rect key="frame" x="50" y="296" width="314" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="eSN-en-h0U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.55044198339999995" blue="0.46372166310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="bBp-1y-Rx8" firstAttribute="trailing" secondItem="B2M-dK-ogs" secondAttribute="trailing" constant="50" id="18o-vE-86D"/>
                             <constraint firstItem="bBp-1y-Rx8" firstAttribute="trailing" secondItem="hDJ-qy-uRK" secondAttribute="trailing" constant="80" id="7UL-bm-i03"/>
                             <constraint firstItem="B2M-dK-ogs" firstAttribute="leading" secondItem="bBp-1y-Rx8" secondAttribute="leading" constant="50" id="9zH-Mv-mSV"/>
-                            <constraint firstItem="bBp-1y-Rx8" firstAttribute="bottom" secondItem="hDJ-qy-uRK" secondAttribute="bottom" constant="100" id="MFf-yd-hqj"/>
+                            <constraint firstItem="bBp-1y-Rx8" firstAttribute="bottom" secondItem="hDJ-qy-uRK" secondAttribute="bottom" constant="250" id="I1g-8U-sga"/>
+                            <constraint firstItem="B2M-dK-ogs" firstAttribute="top" secondItem="dIo-XX-qkj" secondAttribute="bottom" constant="20" id="RYQ-a5-Cmn"/>
                             <constraint firstItem="hDJ-qy-uRK" firstAttribute="top" secondItem="B2M-dK-ogs" secondAttribute="bottom" constant="20" id="TbO-fb-ntt"/>
+                            <constraint firstItem="bBp-1y-Rx8" firstAttribute="trailing" secondItem="dIo-XX-qkj" secondAttribute="trailing" constant="50" id="ZYI-xJ-bQe"/>
                             <constraint firstItem="hDJ-qy-uRK" firstAttribute="leading" secondItem="bBp-1y-Rx8" secondAttribute="leading" constant="80" id="qfl-gI-SZI"/>
+                            <constraint firstItem="dIo-XX-qkj" firstAttribute="leading" secondItem="bBp-1y-Rx8" secondAttribute="leading" constant="50" id="rBa-Km-lBv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bBp-1y-Rx8"/>
                     </view>
                     <connections>
+                        <outlet property="result" destination="dIo-XX-qkj" id="37J-rG-sVa"/>
                         <outlet property="wordTyped" destination="B2M-dK-ogs" id="Beg-7I-F78"/>
                     </connections>
                 </viewController>
@@ -156,7 +170,7 @@
                                     <constraint firstAttribute="height" constant="50" id="Y6v-2V-XVr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="25"/>
-                                <state key="normal" title="Search"/>
+                                <state key="normal" title="Check"/>
                                 <connections>
                                     <action selector="wordSubmitted:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AOB-jL-frC"/>
                                 </connections>
